Fixes navbar on mobile

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ h4 {
     font-weight: bold;
 }
 
+
 .footer {
     -webkit-transition: .5s ease-in-out;
     position: fixed;
@@ -285,6 +286,10 @@ h4 {
     font-size: 1rem;
     font-weight: bold;
     color: var(--red);
+    text-decoration: none;
+}
+
+.no-decorations {
     text-decoration: none;
 }
 
